--- a/TeknikServisWebApp/TS.Web.UI/Views/_ProfilimLayoutPage.cshtml
+++ b/TeknikServisWebApp/TS.Web.UI/Views/_ProfilimLayoutPage.cshtml
@@ -20,6 +20,7 @@
     <link type="text/css" rel='stylesheet' href="~/css/animate.css">
     <!-- End Animate css -->
     <!-- Bootstrap css -->
+    <link href="~/Areas/Yonetim/Content/bootstrap.css" rel="stylesheet" />
     <link type="text/css" rel='stylesheet' href="~/css/bootstrap.min.css">
     <link type="text/css" rel='stylesheet' href="~/js/bootstrap-progressbar/bootstrap-progressbar-3.2.0.min.css">
     <!-- End Bootstrap css -->
@@ -46,7 +47,7 @@
     <div>
         @RenderBody()
     </div>
-    @Html.Partial("_FooterPartialPage1")
+    @*@Html.Partial("_FooterPartialPage1")*@
     <script src="~/js/breakpoints.js"></script>
     <script src="~/js/jquery/jquery-1.11.1.min.js"></script>
     <!-- bootstrap -->
@@ -75,8 +76,9 @@
     <!-- jquery ui -->
     <script src="~/js/jqueryui/jquery-ui.js"></script>
     <!-- end jquery ui -->
-    <script type="text/javascript" language="javascript"
-            src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyCfVS1-Dv9bQNOIXsQhTSvj7jaDX7Oocvs"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgWA-AutGtTLG58S0M44TmNQyGxd3S3eU"
+            type="text/javascript"></script>
+  
     <!-- Modules -->
     <script src="~/js/modules/sliders.js"></script>
     <script src="~/js/modules/ui.js"></script>
