--- a/TeknikServisWebApp/TS.Web.UI/Areas/Yonetim/Views/Ana/Index.cshtml
+++ b/TeknikServisWebApp/TS.Web.UI/Areas/Yonetim/Views/Ana/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model KategoriViewModel
 @{
     ViewBag.Title = "Admin Sayfası";
     Layout = "~/Areas/Yonetim/Views/Shared/_LayoutAdmin.cshtml";
